--- a/modificacion.html
+++ b/modificacion.html
@@ -13,7 +13,7 @@
             <h2>Modificación de Datos</h2>
             <div class="grupo">
                 <label for="nombre">Nombre</label>
-                <input type="text" oninput="deleteError('nombre')" name="nombre" id="nombre" value="Juan">
+                <input type="text" oninput="deleteError('nombre')" name="nombre" id="nombre" value="Juan" required>
                 <div id="nombreHelp" class="form-text text-danger">El nombre es obligatorio</div>
             </div>
             <div class="grupo">
