--- a/listado.html
+++ b/listado.html
@@ -27,37 +27,55 @@
                     <td data-name="Name">Jose</td>
                     <td data-name="Apellido">Ruiz</td>
                     <td data-name="Departamento">Administración</td>
-                    <td data-name="Delete"><button type="button" class="btn btn-outline-danger fs-7" onclick="myFunction()"><i class="bi bi-trash"></i>Eliminar</button></td>
+                    <td data-name="Delete">
+                        <button type="button" class="btn btn-outline-warning fs-7" onclick="editFunction()"><i class="bi bi-pencil"></i> Editar</button>
+                        <button type="button" class="btn btn-outline-danger fs-7" onclick="myFunction()"><i class="bi bi-trash"></i>Eliminar</button>
+                    </td>
                 </tr>
                 <tr>
                     <td data-name="Name">María</td>
                     <td data-name="Apellido">Pérez</td>
                     <td data-name="Departamento">Finanzas</td>
-                    <td data-name="Delete"><button type="button" class="btn btn-outline-danger fs-7" onclick="myFunction()"><i class="bi bi-trash"></i>Eliminar</button></td>
+                    <td data-name="Delete">
+                        <button type="button" class="btn btn-outline-warning fs-7" onclick="editFunction()"><i class="bi bi-pencil"></i> Editar</button>
+                        <button type="button" class="btn btn-outline-danger fs-7" onclick="myFunction()"><i class="bi bi-trash"></i>Eliminar</button>
+                    </td>
                 </tr>
                 <tr>
                     <td data-name="Name">Elisa</td>
                     <td data-name="Apellido">Fernández</td>
                     <td data-name="Departamento">Administración</td>
-                    <td data-name="Delete"><button type="button" class="btn btn-outline-danger fs-7" onclick="myFunction()"><i class="bi bi-trash"></i>Eliminar</button></td>
+                    <td data-name="Delete">
+                        <button type="button" class="btn btn-outline-warning fs-7" onclick="editFunction()"><i class="bi bi-pencil"></i> Editar</button>
+                        <button type="button" class="btn btn-outline-danger fs-7" onclick="myFunction()"><i class="bi bi-trash"></i>Eliminar</button>
+                    </td>
                 </tr>
                 <tr>
                     <td data-name="Name">Rosa</td>
                     <td data-name="Apellido">Sanz</td>
                     <td data-name="Departamento">Comercial</td>
-                    <td data-name="Delete"><button type="button" class="btn btn-outline-danger fs-7" onclick="myFunction()"><i class="bi bi-trash"></i>Eliminar</button></td>
+                    <td data-name="Delete">
+                        <button type="button" class="btn btn-outline-warning fs-7" onclick="editFunction()"><i class="bi bi-pencil"></i> Editar</button>
+                        <button type="button" class="btn btn-outline-danger fs-7" onclick="myFunction()"><i class="bi bi-trash"></i>Eliminar</button>
+                    </td>
                 </tr>
                 <tr>
                     <td data-name="Name">Luis</td>
                     <td data-name="Apellido">Avella</td>
                     <td data-name="Departamento">Comercial</td>
-                    <td data-name="Delete"><button type="button" class="btn btn-outline-danger fs-7" onclick="myFunction()"><i class="bi bi-trash"></i>Eliminar</button></td>
+                    <td data-name="Delete">
+                        <button type="button" class="btn btn-outline-warning fs-7" onclick="editFunction()"><i class="bi bi-pencil"></i> Editar</button>
+                        <button type="button" class="btn btn-outline-danger fs-7" onclick="myFunction()"><i class="bi bi-trash"></i>Eliminar</button>
+                    </td>
                 </tr>
                 <tr>
                     <td data-name="Name">Priya</td>
                     <td data-name="Apellido">Vázquez</td>
                     <td data-name="Departamento">Administración</td>
-                    <td data-name="Delete"><button type="button" class="btn btn-outline-danger fs-7" onclick="myFunction()"><i class="bi bi-trash"></i>Eliminar</button></td>
+                    <td data-name="Delete">
+                        <button type="button" class="btn btn-outline-warning fs-7" onclick="editFunction()"><i class="bi bi-pencil"></i> Editar</button>
+                        <button type="button" class="btn btn-outline-danger fs-7" onclick="myFunction()"><i class="bi bi-trash"></i>Eliminar</button>
+                    </td>
                 </tr>
 
             </tbody>
