--- a/login.html
+++ b/login.html
@@ -13,12 +13,12 @@
         <div class="form">
             <h1>Login</h1>
             <div class="grupo">
-                <input type="text" oninput="deleteError('user')" name="user" id="user" required><span class="barra"></span>
+                <input type="text" oninput="deleteError('user')" name="user" id="user"><span class="barra"></span>
                 <label for="user">Usuario</label>
                 <div id="userHelp" class="error">Usuario entre 8 y 12 caracteres</div>
             </div>
             <div class="grupo">
-                <input type="password" oninput="deleteError('password')" name="password" id="password" required><span class="barra"></span>
+                <input type="password" oninput="deleteError('password')" name="password" id="password"><span class="barra"></span>
                 <label for="password">Contraseña</label>
                 <div id="passwordHelp" class="error">Contraseña entre 8 y 15 caracteres (mayúscula, minúscula y dígito)</div>
             </div>
