--- a/inserccion.html
+++ b/inserccion.html
@@ -44,7 +44,7 @@
                 <option value="2">Finanzas</option>
                 <option value="3">Comercial</option>
             </select>
-            <div class="form-text text-danger" id="departamentoHelp">Debes seleccionar una opción</div>
+            <div class="form-text text-danger" id="departamentoHelp">Debes seleccionar una opcion</div>
         </div>
         <div class="grupo">
             <label>Estudios:</label><br>
